cluster/infrastructure/monitoring/capacitor/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: capacitor
  namespace: monitoring
spec:
  hosts:
  - capacitor.${domain_name}
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: capacitor.monitoring.svc.cluster.local
        port:
          number: 9000
    match:
    - authority:
        exact: capacitor.${domain_name}
      uri:
        prefix: /
